adding total calculate function

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 		<!-- Footer Section End  -->
 
 		<!-- JavaScript File Link  -->
+		<script src="./js/common.js"></script>
 		<script src="./js/app.js"></script>
 	</body>
 </html>
