adding common functional js file

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4">
@@ -63,7 +65,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4">
@@ -75,7 +79,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -87,7 +93,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -99,7 +107,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -111,7 +121,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -123,7 +135,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -135,7 +149,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 						<div class="col-4 mt-5">
@@ -147,7 +163,9 @@
 									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary w-100" type="button">
+									Button
+								</button>
 							</div>
 						</div>
 					</div>
