--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Player Selection</title>
+		<title>PSG Player Selection</title>
 		<!-- Bootstrap CDN Link  -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -19,7 +19,7 @@
 		<!-- Header Section Start  -->
 		<header class="header-container">
 			<div>
-				<h1 class="text-center">PSG Team Player Selectioin</h1>
+				<h1 class="text-center">PSG Team Player Selection</h1>
 				<p class="text-center header-text">
 					Paris Saint-Germain Football Club, commonly referred to as Paris
 					Saint-Germain, Paris, Paris SG or simply PSG is a professional
