ready to deploy

--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
 								<h3 class="text-center">Neymar Jr.</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
 									<a>36 Goal</a>
-									<a>.</a>
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -66,7 +65,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -80,7 +79,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -94,7 +93,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -108,7 +107,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -122,7 +121,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -136,7 +135,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -150,7 +149,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -164,7 +163,7 @@
 									<a>120 Assist</a>
 								</ul>
 								<button class="btn btn-primary w-100" type="button">
-									Button
+									Select
 								</button>
 							</div>
 						</div>
@@ -225,7 +224,7 @@
 		<!-- Footer Section End  -->
 
 		<!-- JavaScript File Link  -->
-		<script src="./js/common.js"></script>
-		<script src="./js/app.js"></script>
+		<script src="./js/playerList.js"></script>
+		<script src="./js/calculate.js"></script>
 	</body>
 </html>
