--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Neymar Jr.</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -60,11 +60,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Kylian Mbappe</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -74,11 +73,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Abdou Diallo</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -88,11 +86,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Idrissa Gueye</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -102,11 +99,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Julian Draxler</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -116,11 +112,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Layvin Kurzawa</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -130,11 +125,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Leandro Paredes</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -144,11 +138,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Marquinhos</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -158,11 +151,10 @@
 							<div class="player-info">
 								<h3 class="text-center">Mitchel Bakker</h3>
 								<ul class="d-flex justify-content-around fw-bolder">
-									<a>36 Goal</a>
-									<a>.</a>
-									<a>120 Assist</a>
+									<a class="text-decoration-none text-secondary">36 Goal</a>
+									<a class="text-decoration-none text-secondary">120 Assist</a>
 								</ul>
-								<button class="btn btn-primary w-100" type="button">
+								<button class="btn btn-primary w-100 border-0" type="button">
 									Select
 								</button>
 							</div>
@@ -171,7 +163,7 @@
 				</div>
 				<div class="col-3">
 					<div class="select-player-list h-25 p-4">
-						<h3>Selected Player</h3>
+						<h3 class="text-center">Selected Player</h3>
 						<ol id="select-player"></ol>
 					</div>
 					<div class="budget-container mt-5 h-30 p-4">
@@ -209,7 +201,9 @@
 						</div>
 						<div class="d-flex justify-content-between fw-bolder mt-3">
 							<span>Total</span>
-							<span>$<span id="total-expense">0000</span></span>
+							<span class="total-amount"
+								>$<span id="total-expense">0000</span></span
+							>
 						</div>
 					</div>
 				</div>
@@ -219,7 +213,11 @@
 		<hr />
 		<!-- Footer Section Start  -->
 		<footer>
-			<p><small>Copyright @ 2022 All Rights Reserved</small></p>
+			<p>
+				<small class="text-secondary"
+					>Copyright @ 2022 All Rights Reserved</small
+				>
+			</p>
 		</footer>
 		<!-- Footer Section End  -->
 
